include/El/lapack_like/funcs.h

/* Sign
   ==== */

/* General
   ------- */
EL_EXPORT ElError ElSign_s( ElMatrix_s A );
EL_EXPORT ElError ElSign_d( ElMatrix_d A );
EL_EXPORT ElError ElSign_c( ElMatrix_c A );
EL_EXPORT ElError ElSign_z( ElMatrix_z A );
EL_EXPORT ElError ElSignDist_s( ElDistMatrix_s A );
EL_EXPORT ElError ElSignDist_d( ElDistMatrix_d A );
EL_EXPORT ElError ElSignDist_c( ElDistMatrix_c A );
EL_EXPORT ElError ElSignDist_z( ElDistMatrix_z A );
/* TODO: Expert version */

EL_EXPORT ElError ElSignDecomp_s( ElMatrix_s A, ElMatrix_s N );
EL_EXPORT ElError ElSignDecomp_d( ElMatrix_d A, ElMatrix_d N );
EL_EXPORT ElError ElSignDecomp_c( ElMatrix_c A, ElMatrix_c N );
EL_EXPORT ElError ElSignDecomp_z( ElMatrix_z A, ElMatrix_z N );
EL_EXPORT ElError ElSignDecompDist_s( ElDistMatrix_s A, ElDistMatrix_s N );
EL_EXPORT ElError ElSignDecompDist_d( ElDistMatrix_d A, ElDistMatrix_d N );
EL_EXPORT ElError ElSignDecompDist_c( ElDistMatrix_c A, ElDistMatrix_c N );
EL_EXPORT ElError ElSignDecompDist_z( ElDistMatrix_z A, ElDistMatrix_z N );
/* TODO: Expert version */

/* Hermitian
   --------- */
EL_EXPORT ElError ElHermitianSign_s( ElUpperOrLower uplo, ElMatrix_s A );
EL_EXPORT ElError ElHermitianSign_d( ElUpperOrLower uplo, ElMatrix_d A );
EL_EXPORT ElError ElHermitianSign_c( ElUpperOrLower uplo, ElMatrix_c A );
EL_EXPORT ElError ElHermitianSign_z( ElUpperOrLower uplo, ElMatrix_z A );
EL_EXPORT ElError ElHermitianSignDist_s
( ElUpperOrLower uplo, ElDistMatrix_s A );
EL_EXPORT ElError ElHermitianSignDist_d
( ElUpperOrLower uplo, ElDistMatrix_d A );
EL_EXPORT ElError ElHermitianSignDist_c
( ElUpperOrLower uplo, ElDistMatrix_c A );
EL_EXPORT ElError ElHermitianSignDist_z
( ElUpperOrLower uplo, ElDistMatrix_z A );
/* TODO: Expert version */

EL_EXPORT ElError ElHermitianSignDecomp_s
( ElUpperOrLower uplo, ElMatrix_s A, ElMatrix_s N );
EL_EXPORT ElError ElHermitianSignDecomp_d
( ElUpperOrLower uplo, ElMatrix_d A, ElMatrix_d N );
EL_EXPORT ElError ElHermitianSignDecomp_c
( ElUpperOrLower uplo, ElMatrix_c A, ElMatrix_c N );
EL_EXPORT ElError ElHermitianSignDecomp_z
( ElUpperOrLower uplo, ElMatrix_z A, ElMatrix_z N );
EL_EXPORT ElError ElHermitianSignDecompDist_s
( ElUpperOrLower uplo, ElDistMatrix_s A, ElDistMatrix_s N );
EL_EXPORT ElError ElHermitianSignDecompDist_d
( ElUpperOrLower uplo, ElDistMatrix_d A, ElDistMatrix_d N );
EL_EXPORT ElError ElHermitianSignDecompDist_c
( ElUpperOrLower uplo, ElDistMatrix_c A, ElDistMatrix_c N );
EL_EXPORT ElError ElHermitianSignDecompDist_z
( ElUpperOrLower uplo, ElDistMatrix_z A, ElDistMatrix_z N );
/* TODO: Expert version */

/* Square-root
   =========== */

/* General
   ------- */
EL_EXPORT ElError ElSquareRoot_s( ElMatrix_s A );
EL_EXPORT ElError ElSquareRoot_d( ElMatrix_d A );
EL_EXPORT ElError ElSquareRoot_c( ElMatrix_c A );
EL_EXPORT ElError ElSquareRoot_z( ElMatrix_z A );
EL_EXPORT ElError ElSquareRootDist_s( ElDistMatrix_s A );
EL_EXPORT ElError ElSquareRootDist_d( ElDistMatrix_d A );
EL_EXPORT ElError ElSquareRootDist_c( ElDistMatrix_c A );
EL_EXPORT ElError ElSquareRootDist_z( ElDistMatrix_z A );
/* TODO: Expert version */

/* Hermitian Positive Semi-Definite
   -------------------------------- */
EL_EXPORT ElError ElHPSDSquareRoot_s( ElUpperOrLower uplo, ElMatrix_s A );
EL_EXPORT ElError ElHPSDSquareRoot_d( ElUpperOrLower uplo, ElMatrix_d A );
EL_EXPORT ElError ElHPSDSquareRoot_c( ElUpperOrLower uplo, ElMatrix_c A );
EL_EXPORT ElError ElHPSDSquareRoot_z( ElUpperOrLower uplo, ElMatrix_z A );
EL_EXPORT ElError ElHPSDSquareRootDist_s
( ElUpperOrLower uplo, ElDistMatrix_s A );
EL_EXPORT ElError ElHPSDSquareRootDist_d
( ElUpperOrLower uplo, ElDistMatrix_d A );
EL_EXPORT ElError ElHPSDSquareRootDist_c
( ElUpperOrLower uplo, ElDistMatrix_c A );
EL_EXPORT ElError ElHPSDSquareRootDist_z
( ElUpperOrLower uplo, ElDistMatrix_z A );