python/lapack_like/funcs.py


def Sign(A,fullDecomp=False):
  if type(A) is Matrix:
    if fullDecomp:
      N = Matrix(A.tag)
      args = [A.obj,N.obj]
      if   A.tag == sTag: lib.ElSignDecomp_s(*args)
      elif A.tag == dTag: lib.ElSignDecomp_d(*args)
      elif A.tag == cTag: lib.ElSignDecomp_c(*args)
      elif A.tag == zTag: lib.ElSignDecomp_z(*args)
      else: DataExcept()
      return N
    else:
      args = [A.obj]
      if   A.tag == sTag: lib.ElSign_s(*args)
      elif A.tag == dTag: lib.ElSign_d(*args)
      elif A.tag == cTag: lib.ElSign_c(*args)
      elif A.tag == zTag: lib.ElSign_z(*args)
      else: DataExcept()
  elif type(A) is DistMatrix:
    if fullDecomp:
      N = Matrix(A.tag)
      args = [A.obj,N.obj]
      if   A.tag == sTag: lib.ElSignDecompDist_s(*args)
      elif A.tag == dTag: lib.ElSignDecompDist_d(*args)
      elif A.tag == cTag: lib.ElSignDecompDist_c(*args)
      elif A.tag == zTag: lib.ElSignDecompDist_z(*args)
      else: DataExcept()
      return N
    else:
      args = [A.obj]
      if   A.tag == sTag: lib.ElSignDist_s(*args)
      elif A.tag == dTag: lib.ElSignDist_d(*args)
      elif A.tag == cTag: lib.ElSignDist_c(*args)
      elif A.tag == zTag: lib.ElSignDist_z(*args)
      else: DataExcept()
  else: TypeExcept()

lib.ElHermitianSign_s.argtypes = \
lib.ElHermitianSign_d.argtypes = \
lib.ElHermitianSign_c.argtypes = \
lib.ElHermitianSign_z.argtypes = \
lib.ElHermitianSignDist_s.argtypes = \
lib.ElHermitianSignDist_d.argtypes = \
lib.ElHermitianSignDist_c.argtypes = \
lib.ElHermitianSignDist_z.argtypes = \
  [c_uint,c_void_p]

lib.ElHermitianSignDecomp_s.argtypes = \
lib.ElHermitianSignDecomp_d.argtypes = \
lib.ElHermitianSignDecomp_c.argtypes = \
lib.ElHermitianSignDecomp_z.argtypes = \
lib.ElHermitianSignDecompDist_s.argtypes = \
lib.ElHermitianSignDecompDist_d.argtypes = \
lib.ElHermitianSignDecompDist_c.argtypes = \
lib.ElHermitianSignDecompDist_z.argtypes = \
  [c_uint,c_void_p,c_void_p]

def HermitianSign(uplo,A,fullDecomp=False):
  if type(A) is Matrix:
    if fullDecomp:
      N = Matrix(A.tag)
      args = [uplo,A.obj,N.obj]
      if   A.tag == sTag: lib.ElHermitianSignDecomp_s(*args)
      elif A.tag == dTag: lib.ElHermitianSignDecomp_d(*args)
      elif A.tag == cTag: lib.ElHermitianSignDecomp_c(*args)
      elif A.tag == zTag: lib.ElHermitianSignDecomp_z(*args)
      else: DataExcept()
      return N
    else:
      args = [uplo,A.obj]
      if   A.tag == sTag: lib.ElHermitianSign_s(*args)
      elif A.tag == dTag: lib.ElHermitianSign_d(*args)
      elif A.tag == cTag: lib.ElHermitianSign_c(*args)
      elif A.tag == zTag: lib.ElHermitianSign_z(*args)
      else: DataExcept()
  elif type(A) is DistMatrix:
    if fullDecomp:
      N = Matrix(A.tag)
      args = [uplo,A.obj,N.obj]
      if   A.tag == sTag: lib.ElHermitianSignDecompDist_s(*args)
      elif A.tag == dTag: lib.ElHermitianSignDecompDist_d(*args)
      elif A.tag == cTag: lib.ElHermitianSignDecompDist_c(*args)
      elif A.tag == zTag: lib.ElHermitianSignDecompDist_z(*args)
      else: DataExcept()
      return N
    else:
      args = [uplo,A.obj]
      if   A.tag == sTag: lib.ElHermitianSignDist_s(*args)
      elif A.tag == dTag: lib.ElHermitianSignDist_d(*args)
      elif A.tag == cTag: lib.ElHermitianSignDist_c(*args)
      elif A.tag == zTag: lib.ElHermitianSignDist_z(*args)
      else: DataExcept()
  else: TypeExcept()

# Square-root
# ===========
lib.ElSquareRoot_s.argtypes = \
lib.ElSquareRoot_d.argtypes = \
lib.ElSquareRoot_c.argtypes = \
lib.ElSquareRoot_z.argtypes = \
lib.ElSquareRootDist_s.argtypes = \
lib.ElSquareRootDist_d.argtypes = \
lib.ElSquareRootDist_c.argtypes = \
lib.ElSquareRootDist_z.argtypes = \
  [c_void_p]

def SquareRoot(A):
  args = [A.obj]
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElSquareRoot_s(*args)
    elif A.tag == dTag: lib.ElSquareRoot_d(*args)
    elif A.tag == cTag: lib.ElSquareRoot_c(*args)
    elif A.tag == zTag: lib.ElSquareRoot_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElSquareRootDist_s(*args)
    elif A.tag == dTag: lib.ElSquareRootDist_d(*args)
    elif A.tag == cTag: lib.ElSquareRootDist_c(*args)
    elif A.tag == zTag: lib.ElSquareRootDist_z(*args)
    else: DataExcept()
  else: TypeExcept()

lib.ElHPSDSquareRoot_s.argtypes = \
lib.ElHPSDSquareRoot_d.argtypes = \
lib.ElHPSDSquareRoot_c.argtypes = \
lib.ElHPSDSquareRoot_z.argtypes = \
lib.ElHPSDSquareRootDist_s.argtypes = \
lib.ElHPSDSquareRootDist_d.argtypes = \
lib.ElHPSDSquareRootDist_c.argtypes = \
lib.ElHPSDSquareRootDist_z.argtypes = \
  [c_uint,c_void_p]

def HPSDSquareRoot(uplo,A):
  args = [uplo,A.obj]
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElHPSDSquareRoot_s(*args)
    elif A.tag == dTag: lib.ElHPSDSquareRoot_d(*args)
    elif A.tag == cTag: lib.ElHPSDSquareRoot_c(*args)
    elif A.tag == zTag: lib.ElHPSDSquareRoot_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElHPSDSquareRootDist_s(*args)
    elif A.tag == dTag: lib.ElHPSDSquareRootDist_d(*args)
    elif A.tag == cTag: lib.ElHPSDSquareRootDist_c(*args)
    elif A.tag == zTag: lib.ElHPSDSquareRootDist_z(*args)
    else: DataExcept()
  else: TypeExcept()
